src/mmgroup/dev/c_files/mat24_functions.h

#define MAT24_ORDER 244823040 // Order of Mathieu group Mat24
MAT24_API
uint32_t mat24_lsbit24(uint32_t v1);
MAT24_API
uint32_t mat24_bw24(uint32_t v1);
MAT24_API
uint32_t mat24_vect_to_bit_list(uint32_t v1, uint8_t *a_out);
MAT24_API
uint32_t mat24_extract_b24(uint32_t v1, uint32_t u_mask);
MAT24_API
uint32_t mat24_spread_b24(uint32_t v1, uint32_t u_mask);
MAT24_API
extern const uint32_t MAT24_BASIS[24];
MAT24_API
extern const uint32_t MAT24_RECIP_BASIS[24+8];
MAT24_API
uint32_t mat24_vect_to_vintern(uint32_t v1);
MAT24_API
uint32_t mat24_vintern_to_vect(uint32_t v1);
MAT24_API
uint32_t mat24_vect_to_cocode(uint32_t v1);
MAT24_API
uint32_t mat24_gcode_to_vect(uint32_t v1);
MAT24_API
uint32_t mat24_cocode_to_vect(uint32_t c1);
MAT24_API
uint32_t mat24_vect_to_gcode(uint32_t v1);
MAT24_API
uint32_t mat24_gcode_to_octad(uint32_t v1);
MAT24_API
uint32_t mat24_vect_to_octad(uint32_t v1);
MAT24_API
uint32_t mat24_octad_to_gcode(uint32_t u_octad);
MAT24_API
uint32_t mat24_octad_to_vect(uint32_t u_octad);
MAT24_API
uint32_t mat24_cocode_syndrome(uint32_t c1, uint32_t u_tetrad);
MAT24_API
uint32_t mat24_syndrome(uint32_t v1, uint32_t u_tetrad);
MAT24_API
uint32_t mat24_gcode_weight(uint32_t v1);
MAT24_API
uint32_t mat24_cocode_weight(uint32_t c1);
MAT24_API
uint32_t mat24_scalar_prod(uint32_t v1, uint32_t c1);
MAT24_API
uint32_t mat24_suboctad_to_cocode(uint32_t u_sub, uint32_t v1);
MAT24_API
uint32_t mat24_cocode_to_suboctad(uint32_t c1, uint32_t v1);
MAT24_API
uint32_t mat24_suboctad_weight(uint32_t u_sub);
MAT24_API
uint32_t mat24_suboctad_scalar_prod(uint32_t u_sub1, uint32_t u_sub2);
MAT24_API
uint32_t mat24_ploop_theta(uint32_t v1);
MAT24_API
uint32_t mat24_ploop_cocycle(uint32_t v1, uint32_t v2);
MAT24_API
uint32_t mat24_mul_ploop(uint32_t v1, uint32_t v2);
MAT24_API
uint32_t mat24_pow_ploop(uint32_t v1, uint32_t u_exp);
MAT24_API
uint32_t mat24_ploop_comm(uint32_t v1, uint32_t v2);
MAT24_API
uint32_t mat24_ploop_cap(uint32_t v1, uint32_t v2);
MAT24_API
uint32_t mat24_ploop_assoc(uint32_t v1, uint32_t v2, uint32_t v3);
MAT24_API
uint32_t mat24_perm_complete_heptad(uint8_t *p_io);
MAT24_API
uint32_t mat24_perm_check(uint8_t *p1);
MAT24_API
uint32_t mat24_perm_from_heptads(uint8_t *h1, uint8_t *h2, uint8_t *p_out);
MAT24_API
uint32_t mat24_m24num_to_perm(uint32_t u_m24, uint8_t *p_out);
MAT24_API
uint32_t mat24_perm_to_m24num(uint8_t  *p1);
MAT24_API
void mat24_perm_to_matrix(uint8_t  *p1, uint32_t *m_out);
MAT24_API
void mat24_matrix_to_perm(uint32_t *m1, uint8_t *p_out);